--- a/res/index.html
+++ b/res/index.html
@@ -12,6 +12,19 @@
 
     <h1>mi codigo</h1>
 
+    <form id="card_form">
+        <input type="text" id="title" name="title">
+        <input type="text" name="content" id="content">
+        <input type="color" name="color" id="color">
+        <input type="submit" value="submit">
+        <input type="number" name="id_card" id="id_card">
+
+    </form>
+
+    <script src="script.js"></script>
+
+
+
 </body>
 
 </html>
