Ya se tienen el Sign In

--- a/res/res_bueno/index.html
+++ b/res/res_bueno/index.html
@@ -31,7 +31,7 @@
 
     </main>
     <div id="new-card-screen-container">
-        <form id="new-card-screen" method="post" action="/new_card">
+        <form id="new-card-screen" method="post" action="/home/createCard">
             <label for="newcard-title"><span class="newcard-label">Title: </span><input type="text" name="title"
                     id="newcard-title"></label>
             <label for="newcard-content"><span class="newcard-label">Content: </span><textarea name="content"
