Se añadio el diseño del btn Log Out. Falta la lógica

--- a/res/res_bueno/index.html
+++ b/res/res_bueno/index.html
@@ -20,6 +20,7 @@
         <ul>
             <li id="create_new"><i class='bx bxs-file-plus bx-md'></i></li>
             <li id="delete_all"><i class='bx bxs-trash bx-md'></i></li>
+            <li id="log_out"><i class='bx bx-log-out bx-md'></i></li>
         </ul>
     </nav>
 
@@ -64,6 +65,8 @@
             </div>
         </div>
     </div>
+
+
 
     <div id="big-screen">
         <div id="big-card">
