Se arregló error de inicio de sesión

--- a/res/res_bueno/index.html
+++ b/res/res_bueno/index.html
@@ -29,7 +29,6 @@
     <main id="cards-container">
 
 
-
     </main>
     <div id="new-card-screen-container">
         <form id="new-card-screen" method="post" action="/home/createCard">
@@ -110,9 +109,9 @@
 
     </div>
 
-    <script src="script3.js?"></script>
-    <script src="script2.js?"></script>
-    <script src="script1.js?"></script>
+    <script src="script3.js"></script>
+    <script src="script2.js"></script>
+    <script src="script1.js"></script>
 
 </body>
 
