Se arregló el problema de la eliminación de tarjeta. Era debido a que se había eliminado el 'res' de la solicitud. En toda solicitud, siempre debe haber un 'res' o el navegador se quedará esperando. El fetch no actualiza la página, por lo que no parece he haya un error, pero el fetch si está esperando una respuesta, la que sea, pero espera una

--- a/res/res_bueno/index.html
+++ b/res/res_bueno/index.html
@@ -16,9 +16,9 @@
 
     <form action="/logInPage/" method="post" id="login_container">
         <label class="login_margin" for="username">Username:</label>
-        <input class="login_margin" type="text" name="id_user" id="username">
+        <input class="login_margin" type="text" name="id_user" id="username" minlength="5">
         <label class="login_margin" for="password">Password:</label>
-        <input class="login_margin" type="text" name="password" id="password">
+        <input class="login_margin" type="text" name="password" id="password" minlength="5">
 
         <div id="btn_container">
             <input type="submit" name="action_type" value="Sign Up">
